# touchless

./: .gitignore  CMakeLists.txt  CONTRIBUTORS  FindLeap.cmake  LeapConfig.cmake  README.md
application/: CMakeLists.txt
application/Touchless/: CMakeLists.txt  Touchless.cpp  Touchless.h  Touchless.rc.in  TouchlessListener.cpp  TouchlessListener.h  TouchlessUI.cpp  TouchlessUI.h  touchless-icon.icns
docs/mac/static-docs/: mac-advanced.html  mac-basic.html  numberOfm.html  readMorem.html  slide1m.html  slide2m.html  slide3m.html  slide4m.html  slide5m.html  touchDistancem.html  touchScrollm.html  touchSpeedm.html
docs/mac/static-docs/js/: TUTORIAL.js  init.js  main.js  touchDistanceTutorial.js
docs/mac/static-docs/jsg/: .TUTORIAL.js.swp  .leap.min.js.swp  .numberOfTutorial.js.swp  .touchScroll.js.swp  TUTORIAL.js  init.js  numberOfTutorial.js  touchDistanceTutorial.js  touchScrollTutorial.js
docs/mac/static-docs/styles/: main.css
docs/mac/static-docs/stylesg/: .slides.css.swp
docs/win/static-docs/: numberOfw.html  readMorew.html  slide1w.html  slide2w.html  slide3w.html  slide4w.html  slide5w.html  touchDistancew.html  touchScrollw.html  touchSpeedw.html  windows-advanced.html  windows-basic.html
docs/win/static-docs/js/: main.js  numberOfTutorial.js  touchScrollTutorial.js  touchSpeedTutorial.js
docs/win/static-docs/jsg/: .index.html.swp  .readMoreTutorial.js.swp  .touchDistance.js.swn  .touchDistance.js.swo  .touchDistance.js.swp  .touchDistanceTutorial.js.swo  .touchDistanceTutorial.js.swp  .touchScroll.html.swp  .touchSpeedTutorial.js.swp  BUTTON.js  TUTORIAL.js  init.js  main.js  numberOfTutorial.js  readMoreTutorial.js  touchScrollTutorial.js  touchSpeedTutorial.js
docs/win/static-docs/styles/: slides.css
docs/win/static-docs/stylesg/: main.css  slides.css
drivers/x64/MultiTouch/: .gitattributes  HidEmulator.inf  HidEmulator.sys  HidEmulatorKmdf.sys  hidemulator.cat
drivers/x86/MultiTouch/: HidEmulator.inf  HidEmulator.sys  HidEmulatorKmdf.cer  HidEmulatorKmdf.sys  hidemulator.cat
installers/: README.txt  REG_MultiSZ.nsh  installer.nsi  macros.nsh
source/: CMakeLists.txt  DataTypes.h  common.h  ocuMacro.h  ocuType.h
source/API/: CMakeLists.txt  LeapPlugin.h  LeapPluginPlus.h  OutputPeripheral.cpp  OutputPeripheralBasic.cpp  OutputPeripheralBasic.h  OutputPeripheralFingerMouse.cpp  OutputPeripheralFingerMouse.h  OutputPeripheralGestureOnly.cpp  OutputPeripheralGestureOnly.h  OutputPeripheralImplementation.h  OutputPeripheralMode.cpp  OutputPeripheralMode.h  PluginImplementation.h  PluginPlus.cpp  PositionalDeltaTracker.h  TouchPeripheral.cpp  TouchPeripheral.h
source/C++11/: CMakeLists.txt  boost_exception_ptr.h  boost_functional.h  boost_future.h  boost_rvalue.h  boost_shared_ptr.h  boost_type_traits.h  cpp11.h  custom_type_index.h
source/Configuration/: CMakeLists.txt  Config.cpp  Config.h  stdafx.h
source/DataStructures/: AxisAlignedBox.h  BoundedQueue.h  CMakeLists.txt  SSEfoo.h  Value.cpp  Value.h  stdafx.h
source/FilterMethods/: CMakeLists.txt  CategoricalFilter.h
source/GestureInteraction/: BasicMode.cpp  BasicMode.h  CMakeLists.txt  FingerMouse.cpp  FingerMouse.h  GestureInteractionManager.cpp  GestureInteractionManager.h  GestureInteractionManagerLinux.cpp  GestureInteractionManagerWin.cpp  GestureOnlyMode.cpp  GestureOnlyMode.h  OutputPeripheral.cpp  OutputPeripheralBasic.cpp  OutputPeripheralBasic.h  OutputPeripheralFingerMouse.cpp  OutputPeripheralFingerMouse.h  OutputPeripheralGestureOnly.cpp  OutputPeripheralGestureOnly.h  OutputPeripheralImplementation.h
source/OSInteraction/: CMakeLists.txt  FocusAppInfo.cpp  GdiPlusInitializer.cpp  GdiPlusInitializer.h  InterfaceCodes.h  LPGesture.cpp  LPGesture.h  LPLinux.cpp  LPLinux.h  LPMac.h  LPMac.mm  OSInteraction.cpp  OSInteraction.h  OSInteractionLinux.cpp  OSInteractionLinux.h  OSInteractionMac.cpp  OSInteractionMac.h  OSInteractionWin.cpp  OSInteractionWin.h  Touch.h  TouchManager.cpp  TouchManager.h  TouchManagerWin7Driver.cpp  TouchManagerWin7Driver.h  TouchManagerWin7Undocumented.cpp  TouchManagerWin7Undocumented.h  TouchManagerWin8.cpp  TouchManagerWin8.h  TouchPeripheral.cpp  TouchPeripheral.h  Win8TouchStructures.h  stdafx.h
source/Overlay/: CMakeLists.txt  LPIcon.cpp  LPIcon.h  LPIconLinux.cpp  LPIconLinux.h  LPIconMac.cpp  LPIconMac.h  LPIconWin.cpp  LPIconWin.h  LPIconWindowClass.cpp  LPIconWindowClass.h  LPImage.cpp  LPImage.h  LPImageLinux.cpp  LPImageLinux.h  LPImageMac.cpp  LPImageMac.h  LPImageWin.cpp  LPImageWin.h  LPOverlay.mm  Overlay.cpp  Overlay.h  stdafx.h
source/Peripherals/: CMakeLists.txt  FocusAppInfo.h  GdiPlusInitializer.cpp  LPGesture.cpp  LPGesture.h  LPIcon.cpp  LPIcon.h  LPImage.cpp  LPImage.h  LPLinux.h  LPMac.h  LPMac.mm  LPOverlay.h  LPScreen.cpp  LPScreen.h  LPVirtualScreen.cpp  LPVirtualScreen.h  Touch.h  TouchManager.cpp  TouchManager.h  TouchManagerWin7Driver.h  TouchManagerWin7Undocumented.cpp  TouchManagerWin7Undocumented.h  stdafx.cpp  stdafx.h
source/TouchlessUI/: CMakeLists.txt  Touchless.cpp  Touchless.exe.manifest.in  Touchless.rc.in  TouchlessListener.cpp  TouchlessListener.h  TouchlessUI.cpp
source/Utility/: CMakeLists.txt  CurrentApplication.cpp  CurrentApplication.h  FileSystemUtil.cpp  FileSystemUtil.h  FilterBase.h  FrontmostChecker.h  Heartbeat.cpp  Heartbeat.h  LPGeometry.h  LPScreen.h  LPVirtualScreen.cpp  PositionalDeltaTracker.cpp  RollingMean.h  StateMachine.h  TimedHistory.h  Value.cpp  Value.h  stdafx.h
unused/API/: LeapPluginPlus.h  PluginImplementation.h  PluginPlus.cpp  SharedObject.h  stdafx.h
